testdata/zkc/invalid/debug_02.zkc
//error:3:1-23:debug function cannot return values
#[debug]
fn dbg(x:u8) -> (r:u8) {
    r = x
    return
}

fn main() {
    dbg(0)
}
